--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.cubeville</groupId>
   <artifactId>CVBuryBerry</artifactId>
-  <version>1.18</version>
+  <version>v1.0.16</version>
   <packaging>jar</packaging>
 
   <name>CVBuryBerry</name>
@@ -26,20 +26,14 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.cubeville</groupId>
+      <groupId>com.github.ptown16</groupId>
       <artifactId>CVGames</artifactId>
-      <version>v1.0.15</version>
+      <version>2349f3f</version>
     </dependency>
     <dependency>
       <groupId>org.cubeville</groupId>
       <artifactId>CVLoadouts</artifactId>
       <version>1.18</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>LibsDisguises</groupId>
-      <artifactId>LibsDisguises</artifactId>
-      <version>10.0.28-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
