--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: CVBuryBerry
-version: 1.18
+version: 1.0.16
 main: org.cubeville.cvburyberry.CVBuryBerry
 api-version: 1.18
 prefix: CVBuryBerry
 depend: [ CVGames, CVLoadouts ]
-authors: [ Ptown16, FrediW ]
+authors: [ Ptown16, FrediW, WeatherCats ]
 description: Bury Berry for Cubeville!
 website: cubeville.org
